# sdl2_cmake_template

./: CMakeLists.txt  README.md
